# CocoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CocoEngine.sln  LICENSE  README.md  premake5.lua
Apps/Sandbox/: CMakeLists.txt
Apps/Sandbox/src/: SandboxApplication.cpp  SandboxApplication.h  linuxmain.cpp
Apps/TopDownGame/: CMakeLists.txt
Apps/TopDownGame/src/: GameApplication.cpp  GameApplication.h  linuxmain.cpp
src/Coco/Core/: API.h  Application.cpp  Application.h  Asserts.cpp  Asserts.h  CMakeLists.txt  Core.h  Corepch.cpp  Corepch.h  Defines.h  Engine.cpp  Engine.h  EnginePlatform.cpp  EnginePlatform.h  EngineService.cpp  EngineService.h  ExitCodes.h  premake5.lua
src/Coco/Core/Events/: Event.h  EventArgs.h  EventHandler.h  Query.h  QueryHandler.h
src/Coco/Core/IO/: BinaryStream.h  EngineFileSystem.cpp  EngineFileSystem.h  File.cpp  File.h  FileExceptions.cpp  FileExceptions.h  FilePath.cpp  FilePath.h  FileSystem.h  FileTypes.cpp  FileTypes.h  Stream.cpp  Stream.h  StringStream.cpp  StringStream.h  TextStream.h
src/Coco/Core/Input/: InputService.cpp  InputService.h  InputTypes.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/Coco/Core/Logging/: Log.cpp  Log.h  LogLevel.h  LogSink.cpp  LogSink.h  LogTypes.h  Logger.cpp  Logger.h  LoggerTypes.cpp  LoggerTypes.h
src/Coco/Core/MainLoop/: MainLoop.cpp  MainLoop.h  MainLoopTickListener.cpp  MainLoopTickListener.h  TickInfo.cpp  TickInfo.h  TickListener.cpp  TickListener.h
src/Coco/Core/Math/: Math.cpp  Math.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Rect.h  Size.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/Coco/Core/Memory/: Allocator.cpp  Allocator.h  MemoryManager.cpp  MemoryManager.h  MemoryOverrides.cpp  MemoryOverrides.h  Ptrs.h  Refs.cpp  Refs.h
src/Coco/Core/Platform/: EnginePlatform.h  EnginePlatformExceptions.cpp  EnginePlatformExceptions.h  EnginePlatformFactory.h  EnginePlatformTypes.h  IEnginePlatform.h
src/Coco/Core/ProcessLoop/: ProcessLoop.cpp  ProcessLoop.h  TickInfo.h  TickListener.cpp  TickListener.h
src/Coco/Core/RTTI/: RTTI.cpp  RTTI.h
src/Coco/Core/Resources/: AssetManager.cpp  AssetManager.h  CachedResource.cpp  CachedResource.h  FileResource.cpp  FileResource.h  IResource.h  IResourceSerializer.h  Resource.cpp  Resource.h  ResourceCache.h  ResourceLibrary.cpp  ResourceLibrary.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceSerializer.cpp  ResourceSerializer.h  ResourceSerializerFactory.cpp  ResourceSerializerFactory.h  ResourceTypes.cpp  ResourceTypes.h
src/Coco/Core/Scene/: Scene.cpp  Scene.h  SceneEntity.cpp  SceneEntity.h
src/Coco/Core/Services/: EngineService.cpp  EngineService.h  EngineServiceExceptions.cpp  EngineServiceExceptions.h  EngineServiceManager.cpp  EngineServiceManager.h  ServiceManager.cpp  ServiceManager.h
src/Coco/Core/Types/: Array.h  ArrayContainer.h  ArrayContainerSorter.h  BoundingBox.cpp  BoundingBox.h  Color.cpp  Color.h  CoreExceptions.cpp  CoreExceptions.h  CoreTypes.h  DateTime.cpp  DateTime.h  EnumTypes.h  Event.h  Exception.cpp  Exception.h  Exceptions.cpp  Exceptions.h  ExitCodes.h  Freelist.cpp  Freelist.h  List.h  ManagedRef.cpp  ManagedRef.h  Map.h  Matrix.cpp  Matrix.h  MemoryPool.h  Optional.h  PagedArray.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Ref.h  Refs.h  Set.h  SharedObjectPool.h  (+27 more)
src/Coco/ECS/: CMakeLists.txt  ComponentView.h  ECSService.cpp  ECSService.h  ECSpch.cpp  ECSpch.h  Entity.cpp  Entity.h  EntityChildView.cpp  EntityChildView.h  EntityComponent.cpp  EntityComponent.h  EntityComponentList.h  EntityComponentManager.cpp  EntityComponentManager.h  EntityComponentRegistry.h  EntityComponentStorage.cpp  EntityComponentStorage.h  EntityComponentView.h  EntityData.cpp  EntityData.h  EntityManager.cpp  EntityManager.h  EntityStorage.cpp  EntityStorage.h  EntityTypes.cpp  EntityTypes.h  Scene.cpp  Scene.h  SceneSystem.cpp  SceneSystem.h  SceneTickListener.cpp  SceneTickListener.h  SceneTypes.h  SceneView.h  entt.cpp  entt.h  premake5.lua
src/Coco/ECS/Components/: CameraComponent.cpp  CameraComponent.h  EntityComponent.cpp  EntityComponent.h  EntityInfoComponent.cpp  EntityInfoComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  ScriptComponent.h  (+17 more)
src/Coco/ImGui/: CMakeLists.txt  ImGuiCocoPlatform.cpp  ImGuiCocoPlatform.h  ImGuiInputLayer.cpp  ImGuiInputLayer.h  ImGuiRenderPass.cpp  ImGuiRenderPass.h  ImGuiRenderViewProvider.cpp  ImGuiRenderViewProvider.h  ImGuiSceneDataProvider.cpp  ImGuiSceneDataProvider.h  ImGuiService.cpp  ImGuiService.h  imgui_coco_config.h  premake5.lua
src/Coco/Input/: CMakeLists.txt  InputEnginePlatform.h  InputEvent.cpp  InputEvent.h  InputLayer.cpp  InputLayer.h  InputService.cpp  InputService.h  InputTypes.h  Inputpch.cpp  Keyboard.cpp  Keyboard.h  KeyboardTypes.cpp  KeyboardTypes.h  Mouse.cpp  Mouse.h  MouseTypes.cpp  MouseTypes.h  UnhandledInputLayer.cpp  UnhandledInputLayer.h  premake5.lua
src/Coco/Rendering/: AttachmentCache.cpp  AttachmentCache.h  CMakeLists.txt  FrameRenderTasks.cpp  FrameRenderTasks.h  IMaterial.h  IRenderingPlatform.h  Material.cpp  Material.h  MaterialInstance.cpp  MaterialInstance.h  MaterialTypes.h  Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h  MeshTypes.cpp  MeshTypes.h  MeshUtilities.cpp  MeshUtilities.h  MeshUtils.cpp  MeshUtils.h  OverrideMaterial.cpp  OverrideMaterial.h  RenderListener.cpp  RenderListener.h  RenderObjectView.cpp  RenderObjectView.h  RenderScene.cpp  RenderScene.h  RenderSceneStorage.cpp  RenderSceneStorage.h  RenderSceneTypes.cpp  RenderSceneTypes.h  RenderService.cpp  RenderService.h  RenderStats.cpp  RenderStats.h  RenderTarget.cpp  RenderTarget.h  (+25 more)
src/Coco/Windowing/: CMakeLists.txt  DisplayInfo.cpp  DisplayInfo.h  IWindowingPlatform.h  Window.cpp  Window.h  WindowExceptions.cpp  WindowExceptions.h  WindowService.cpp  WindowService.h  WindowTypes.cpp  WindowTypes.h  WindowingEnginePlatform.h  WindowingPlatform.h  WindowingService.cpp  WindowingService.h  Windowpch.cpp  premake5.lua
(+870 files in other folders)
