add_library(Core STATIC
        Engine.cpp
        Engine.h
        Application.cpp
        Application.h
        Memory/Ptrs.h
        Memory/Allocator.cpp
        Memory/Allocator.h
        Types/CoreTypes.h
        Memory/MemoryManager.cpp
        Memory/MemoryManager.h
        EnginePlatform.h
        EnginePlatform.cpp
        Memory/Allocators/HeapAllocator.cpp
        Memory/Allocators/HeapAllocator.h
        Memory/MemoryOverrides.h
        Types/Map.h
        Memory/MemoryOverrides.cpp
        Memory/Allocators/STLAllocator.h
        Asserts.h
        Asserts.cpp
        Logging/Logger.cpp
        Logging/Logger.h
        Logging/LoggerTypes.h
        Logging/LoggerTypes.cpp
        Types/ArrayContainer.h
        Types/StackArray.h
        Types/Exception.cpp
        Types/Exception.h
        Logging/LogSink.h
        Logging/LogSinks/StdOutLogSink.cpp
        Logging/LogSinks/StdOutLogSink.h
        Types/DateTime.cpp
        Types/DateTime.h
        Types/TimeSpan.cpp
        Types/TimeSpan.h
        Types/Span.h
        Types/StringContainer.h
        Types/Array.h
        Types/String.h
        Types/String.cpp
        ProcessLoop/ProcessLoop.cpp
        ProcessLoop/ProcessLoop.h
        ProcessLoop/TickInfo.h
        ProcessLoop/TickListener.cpp
        ProcessLoop/TickListener.h
        Types/ArrayContainerSorter.h
        Types/Sorting/QSorter.h
        Memory/Allocators/StackAllocator.cpp
        Memory/Allocators/StackAllocator.h
        Math/Math.cpp
        Math/Math.h
        Memory/Allocators/LinearAllocator.cpp
        Memory/Allocators/LinearAllocator.h
        EngineService.cpp
        EngineService.h
        Math/Vector2.h
        Math/Size.h
        Types/EnumTypes.h
        Types/Optional.h
        Memory/Refs.h
        Memory/Refs.cpp
        Math/Vector2.cpp
        Types/Event.h
        Types/Version.cpp
        Types/Version.h
        Math/Vector3.cpp
        Math/Vector3.h
        Resources/Resource.cpp
        Resources/Resource.h
        Resources/ResourceManager.cpp
        Resources/ResourceManager.h
        RTTI/RTTI.cpp
        RTTI/RTTI.h
        Types/Color.cpp
        Types/Color.h
        Math/Rect.h
        IO/FilePath.cpp
        IO/FilePath.h
        IO/File.cpp
        IO/File.h
        IO/FileTypes.h
        Math/Quaternion.h
        Math/Quaternion.cpp
        Math/Vector4.cpp
        Math/Vector4.h
        IO/FileTypes.cpp
        IO/FileSystem.h
        IO/FileSystems/DiskFileSystem.cpp
        IO/FileSystems/DiskFileSystem.h
        Types/StringContainer.cpp
        Math/Matrix4x4.h
        Math/Matrix4x4.cpp
        Types/PagedArray.h
        Types/UUID.cpp
        Types/UUID.h
        Math/Random.cpp
        Math/Random.h
        Memory/Allocators/FreeListAllocator.cpp
        Memory/Allocators/FreeListAllocator.h
)
